Update favicon to rounded politiq.png

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/politiq.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PolitIQ - Decode the News. Discover the Truth.</title>
     <meta name="description" content="PolitIQ uses AI to analyze political bias, tone, and framing in news articles to help you understand media perspective." />
